[package]
name = "swd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
structopt = "0.3.26"
serde_qs = "0.9.2"
serde-aux = "3.0.1"
chrono = { version = "0.4.19", features = ["serde"] }
itertools = "0.10.3"
dialoguer = "0.10.1"
